Revert "fix(components): Fix form field inconsistent spacing when used under Form and InputGroup JOB-37646 (#762)" (#815)
This reverts commit 814803912c8a67ba02db2577ec857522833f3f01.

--- a/packages/components/src/InputValidation/InputValidation.css
+++ b/packages/components/src/InputValidation/InputValidation.css
@@ -1,3 +1,7 @@
+.hasValidationMessage {
+  margin-top: var(--space-smaller);
+}
+
 .message {
   display: flex;
   align-items: center;
